[tool.poetry]
name = "ion-exporter"
version = "0.1.0"
description = "Prometheus exporter for Aruba Instant On devices."
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ion-client = "^1.0.0"
more-itertools = "^10.1.0"
prometheus-client = "^0.17.1"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"

[tool.ruff]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
